--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title></title>
+	<title>Simple Title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -15,6 +15,7 @@
 	<!-- Content Goes Here -->
 		<p>
 			Just some content
+				
 		</p>
 	</main>
 	<footer class="container">
