copyright note added

--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+ Copyright Lama.info
+>
 <head>
 	<title>Simple Title changed</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
