making changes to simple.html (ma nepali timi nepali)

--- a/simple.html
+++ b/simple.html
@@ -17,7 +17,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-	Ma Nepali , Timi Nepali
+	Ma Nepali , Timi Nepali 1111
 				
 		</p>
 	</main>
